# NEURAX

./: .dockerignore  .gitignore  API_REFERENCE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  Dockerfile  Dockerfile.agent  Dockerfile.ui  README.md  docker-compose.yml  erreur.md  mlir_json.md  package-lock.json  total.md
examples/models/: gpt4.json  llama2_70b.json  mixtral_8x7b.json  rwkv_7b.json  stable_diffusion_1.5.json
models/: diffusion_xl_2b.json  diffusion_xl_2b_output.json  diffusion_xl_2b_report.json  gpt2_medium.json  gpt2_small.json  gpt3_175b.json  gpt3_175b_output.json  gpt3_175b_report.json  graphsage_1b.json  graphsage_1b_output.json  graphsage_1b_report.json  llama_70b.json  llama_8b.json  mamba_vl_8b.json  mamba_vl_8b_output.json  mixtral_8x22b.json  mixtral_8x22b_output.json  mixtral_8x22b_report.json  spiking_resnet_500m.json  spiking_resnet_500m_output.json  spiking_resnet_500m_report.json
neurax-agent/: ..env.swp  agent_runner.py  app.py  arch_planner.py  block_constraints.json  catalogue.json  catalogue_store.py  config.py  constants.py  graph_utils.py  langchain_runner.py  layout_engine.py  materializer.py  requirements.txt  snapshot_ops.py  suggestions.py  topology_validator.py  verify_arch.py
neurax-agent/tests/: test_suggestions.py
neurax-cli/: Cargo.toml
neurax-cli/src/: main.rs
neurax-core/: Cargo.toml
neurax-core/src/: engine.rs  lib.rs  runner.rs  streaming.rs  units.rs
neurax-core/src/export/: mod.rs  onnx.rs
neurax-core/src/ir/: backend.rs  mod.rs
neurax-core/tests/: certification_checklist.rs  challenging_models.rs  concurrency_test.rs  error_handling_test.rs  family_profiling.rs  flops_cross_validation.rs  hardware_corrections.rs  internal_coherence.rs  json_output_test.rs  metrics_count.rs  real_world_comparison.rs  ui_payload_contract.rs  vram_validation.rs
neurax-formulas/: Cargo.toml
neurax-formulas/benches/: formulas_bench.rs
neurax-formulas/src/: attention.rs  cnn_blocks.rs  conv.rs  custom.rs  diffusion.rs  embedding.rs  gnn.rs  lib.rs  mlp.rs  moe.rs  normalization.rs  rnn.rs  ssm.rs
neurax-formulas/tests/: formula_verification_test.rs
neurax-hardware-db/: Cargo.toml
neurax-hardware-db/src/: cpu.rs  gpu.rs  interconnect.rs  lib.rs
neurax-ir/: Cargo.toml
neurax-ir/src/: error.rs  ir_injector.rs  lib.rs  traits.rs
neurax-ir/src/architecture/: ir.rs  metrics.rs  mod.rs  pass.rs
neurax-ir/src/compute/: ir.rs  metrics.rs  mod.rs  pass.rs
neurax-ir/src/cost/: ir.rs  metrics.rs  mod.rs  pass.rs  pricing.rs
neurax-ir/src/dynamic/: README.md  behavioral.rs  evaluation.rs  feedback.rs  mod.rs  stability.rs  types.rs  virtual_memory.rs
neurax-ir/src/graph/: ir.rs  metrics.rs  mod.rs  pass.rs
neurax-ir/src/hardware/: calibration.rs  ir.rs  metrics.rs  mod.rs  pass.rs  roofline.rs
neurax-ir/src/inference/: ir.rs  mod.rs  pass.rs
neurax-ir/src/memory/: fragmentation.rs  ir.rs  liveness.rs  metrics.rs  mod.rs  pass.rs
neurax-ir/src/operator/: formulas.rs  fusion.rs  ir.rs  metrics.rs  mod.rs  pass.rs
neurax-ir/src/parallelism/: ir.rs  metrics.rs  mod.rs  pass.rs  strategies.rs
neurax-ir/src/precision/: backward.rs  confidence.rs  mod.rs
neurax-ir/src/report/: format.rs  ir.rs  json_output.rs  mod.rs  pass.rs  time_machine.rs
neurax-ir/src/tensor/: ir.rs  metrics.rs  mod.rs  pass.rs
neurax-mlir/: CONFORMITY_REPORT.md  Cargo.toml
neurax-mlir/docs/: CODE_GENERATION_FLOW.md  architecture.md
neurax-mlir/examples/: codegen_demo.rs
neurax-mlir/src/: compiler.rs  context.rs  integration.rs  lib.rs  module.rs  tests.rs
neurax-mlir/src/dialects/: architecture.rs  compute.rs  cost.rs  data.rs  graph.rs  hardware.rs  memory.rs  mod.rs  operator.rs  optimization.rs  parallelism.rs  report.rs  tensor.rs  training.rs  utils.rs
neurax-mlir/src/iree/: compiler.rs  mod.rs
neurax-mlir/src/lowering/: architecture.rs  context.rs  hardware.rs  memory.rs  mod.rs  operator.rs  parallelism.rs  pass.rs
neurax-mlir/src/passes/: architecture.rs  compute.rs  cost.rs  hardware.rs  memory.rs  mod.rs  parallelism.rs
neurax-mlir/src/targets/: cpu.rs  cuda.rs  metal.rs  mod.rs  rocm.rs  vulkan.rs
neurax-mlir/tests/: integration_tests.rs  lowering_tests.rs
neurax-parser/: Cargo.toml
neurax-parser/src/: absorption.rs  coherence.rs  error.rs  lib.rs  model_config.rs  schema.rs  schema_validator.rs  validator.rs
neurax-parser/tests/: absorption_integration.rs  diffusion_multi_test.rs  diffusion_sdxl_test.rs  gan_stylegan_test.rs  gnn_molecular_test.rs  hybrid_architecture_test.rs  mamba_ssm_test.rs  massive_cnn_test.rs  massive_spiking_test.rs  moe_large_test.rs  precision_test.rs  rnn_lstm_test.rs  rnn_multi_test.rs  single_attention_test.rs  single_mlp_test.rs  single_normalization_test.rs  spiking_snn_test.rs  transformer_1t_test.rs  universal_compiler_test.rs
neurax-service/: .env.example  Cargo.toml
neurax-service/src/: main.rs  presets.rs
neurax-tui/: Cargo.toml
neurax-tui/src/: app.rs  comparison.rs  main.rs  metrics_display.rs  model_selector.rs  real_world_data.rs  ui.rs
neurax-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
neurax-ui/.lovable/: plan.md
neurax-ui/docs/: bilan_fonctionnalites_frontend.md  etat_implementation_fonctionnalites.md  plan_implementation_final.md
neurax-ui/src/: App.tsx  index.css  vite-env.d.ts
neurax-ui/src/components/: NavLink.tsx
neurax-ui/src/contexts/: AuthContext.tsx  HardwareContext.tsx  PlanContext.tsx  ThemeContext.tsx
neurax-ui/src/data/: architectureCatalog.ts
neurax-ui/src/hooks/: useMultiSelect.ts
neurax-ui/src/lib/: supabaseClient.ts
test_models/: 01_gpt2_small.json  03_bert_base.json  05_vit_large.json  06_resnet50.json  09_bilstm_seq2seq.json  10_deepseek_v3.json  11_t5_base.json  12_whisper_large.json  13_efficientnet_b7.json  14_gptj_6b.json  15_falcon_40b.json  16_clip_vit_l14.json  17_phi3_mini.json  18_gemma_2b.json  19_dinov2_giant.json  20_qwen2_72b.json  generate_models.py
tests/: absorption_integration.rs
(+104 files in other folders)
