[workspace]
members = [
    "neurax-core",
    "neurax-parser",
    "neurax-ir",
    "neurax-formulas",
    "neurax-hardware-db",
    "neurax-cli",
    "neurax-tui",
    "neurax-service",
    "neurax-mlir",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
approx = "0.5"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
criterion = "0.5"
crossterm = { version = "0.28", features = ["event-stream"] }
dashmap = "6"
evalexpr = "11"
indexmap = "2"
itertools = "0.13"
melior = "0.18"
num_cpus = "1"
once_cell = "1"
parking_lot = "0.12"
petgraph = "0.6"
proptest = "1"
ratatui = "0.28"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"

[workspace.lints.rust]
unsafe_code = "allow"
unused_crate_dependencies = "allow"
