[package]
name = "neurax-hardware-db"
version = "0.1.0"
edition = "2021"
description = "Hardware database for NEURAX (GPU specs, etc.)"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }

[lints]
workspace = true
